test/expected/test_sql_time_func.sh_1804a2824c5e7dee903ef7500a3b60a123b7de01.err
✘ error: invalid timestamp: 2022-03-02T10:20:30+
 reason: the leading part of the timestamp was matched, however, the trailing text “+” was not
 --> command-option:1
 | ;SELECT timezone('UTC', '2022-03-02T10:20:30+')
 = note: input matched time format “%Y-%m-%dT%H:%M:%S”
 = note: 2022-03-02T10:20:30+
                            ^ unrecognized input
 = help: fix the timestamp or remove the trailing text
